Work on Data screen

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <ul>
 				<li class="litemplate">
 					<button class="editthecomment libutton" type="button">Edit</button>
-					<label class="labeltemplate"><input class="inputtemplate" type="text" readonly></label>
+					<label> <input type="text" readonly></label>
 				</li>
             </ul>
         </div>
