radio button support in pataientdata

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <ul>
 				<li class="litemplate">
 					<button class="editthecomment libutton" type="button" onClick="objectPatientData.Click(this)">Edit</button>
-					<label> <input type="text" size=40 readonly></label>
+					<label> </label>
 				</li>
             </ul>
         </div>
