Start Operations List work

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             <div class="PatientList pageOverlay">
                 <div id="PatientListContent" ></div>
             </div>
+            <div class="OperationList pageOverlay">
+                <div id="OperationListContent" ></div>
+            </div>
             <div class="PatientData PatientDemographics PatientMedical PatientOperation pageOverlay">
                 <div id="PatientDataContent" ></div>
             </div>
@@ -68,7 +71,7 @@
                     </div>
                     <div class="PatientProcButtons" id="ProcList">
                         <button type="button" class="divbutton" onclick="showCommentList()">Comments</button>
-                        <button type="button" class="divbutton" onclick="showPatientProcedures()">New Procedure</button>
+                        <button type="button" class="divbutton" onclick="showPatientOperations()">New Procedure</button>
                     </div>
                     <div class="PatientProcButtons">
                         <button type="button" class="divbutton" onclick="printCard()">Print Card</button>
