--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
         <script src="js/pouchdb-7.2.1.min.js"></script>
         <!-- qr -->
         <script src=js/qrenc-4.0.0.min.js></script>
+        <!-- datepicker -->
+        <script src="js/datepicker.js"></script>
         <script src="js/base.js"></script>
         <script src="js/app.js"></script>
     </body>
