--- a/index.html
+++ b/index.html
@@ -213,6 +213,9 @@
         <script src=js/qrenc-4.0.0.min.js></script>
         <!-- datepicker -->
         <script src="js/datepicker.js"></script>
+        <!-- timepicker -->
+        <script src="js/time-pick.js"></script>
+        <script src="js/length-pick.js"></script>
         <script src="js/base.js"></script>
         <script src="js/app.js"></script>
     </body>
