Now working date and date/time Need to fix length

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 </div>
             </div>
             <div class="PatientData PatientDemographics PatientMedical OperationEdit pageOverlay">
+                <input type="text" size=9 id="test">
                 <div id="PatientDataContent" ></div>
             </div>
             <div class="PatientPhoto pageOverlay">
